# televoltaic

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  pyproject.toml
televoltaic/: __init__.py  __version__.py
televoltaic/contrib/auth/: __init__.py
televoltaic/core/: __init__.py  apps.py  exceptions.py  framework.py  settings.py
televoltaic/db/: __init__.py  models.py
televoltaic/db/clients/: __init__.py  base.py
televoltaic/logging/: __init__.py  config.py  formatters.py
televoltaic/management/: __init__.py  base.py
televoltaic/management/commands/: __init__.py  startapp.py  startproject.py
televoltaic/middleware/: __init__.py  base.py
televoltaic/routing/: __init__.py  api.py  dispatcher.py  handlers.py  patterns.py
televoltaic/utils/: __init__.py  decorators.py  helpers.py
tests/: __init__.py
